--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "ryo-n-cell <nakamuraryota582@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1"
   }
